Bug 152460 - Numeral to right of RTL style name in sidebar and dropdown style previews
Summary: Numeral to right of RTL style name in sidebar and dropdown style previews
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Styles-Preview RTL
  Show dependency treegraph
 
Reported: 2022-12-10 22:59 UTC by stragu
Modified: 2024-08-03 09:15 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2022-12-10 22:59:10 UTC
Steps:
1. Open attachment 111087 [details]
2. Open Style sidebar

Results:
Style "بلا عنوان1" has the numeral on the right of "بلا عنوان", which does not match the style properties.

Assumed to be a regression from the fix for bug 87535, with commit:
https://git.libreoffice.org/core/commit/ad085990b8073a122ac5222e5220f8f1d6826dcf

Note this is not the case for the style previews in the tabbed UI as those are unaffected by the aforementioned fix.

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not in:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 stragu 2022-12-10 23:18:41 UTC
(same thing for the styles dropdown preview, which can be seen after applying the style to some more text)
Comment 2 Eyal Rozenberg 2022-12-10 23:29:02 UTC
> Style "بلا عنوان1" has the numeral on the right of "بلا عنوان",
> which does not match the style properties.

I think you meant that the style name is rendered in the LTR-direction, with the neutral character 1 placed to the right of the hard-RTL sequence, as opposed to the RTL-direction.

Also, what about elsewhere in the UI, e.g. in the organizer?

Will try to reproduce with a new build soon.
Comment 3 stragu 2022-12-13 07:38:50 UTC
Apologies, in the Description, the commit is completely irrelevant, I probably copy-pasted wrong.

Bibisected with 7.5 Linux repo, confirmed regression for the sidebar, as expected starting with:

commit 0483fbd1d05d74c394d9274bdee77b3b2aebb495
author	Khaled Hosny <khaled@aliftype.com>	Sun Aug 21 01:49:57 2022 +0200
committer	Caolán McNamara <caolanm@redhat.com>	Mon Aug 22 15:44:36 2022 +0200
tree 53c6bf1b3feb33bd8504132be585a02a5cca2244
parent 044fc5c8b225732d57970d3bf0720c13a5a9e0a4

tdf#87535: Preview styles using CTL/CJK fonts in the sidebar

I assume the same issue in the dropdown was introduced by companion commit:

https://git.libreoffice.org/core/commit/044fc5c8b225732d57970d3bf0720c13a5a9e0a4

(In reply to Eyal Rozenberg from comment #2)
> Also, what about elsewhere in the UI, e.g. in the organizer?

Displayed properly in the organiser as it is not a preview. That's what I meant with the poorly worded "does not match the style properties".
Comment 4 Khaled Hosny 2022-12-15 21:17:25 UTC
Note that this issue affects other existing font previews, like the one in Character dialog.
Comment 5 Khaled Hosny 2022-12-15 22:09:33 UTC
(In reply to خالد حسني from comment #4)
> Note that this issue affects other existing font previews, like the one in
> Character dialog.

Bug 152533
Comment 6 Commit Notification 2022-12-16 06:04:52 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bfecacb2487ba9470600e6f64056d9b1816ee96b

tdf#152460: Improve script handling in style previews

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 stragu 2022-12-16 18:33:01 UTC
Verified fix in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4e4a31ac7d920c71e26ca4acd18c11ec2bd015bb
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Khaled!
Comment 8 Commit Notification 2022-12-16 18:39:25 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/85aac9d9b14d5af9700b34237cc9b0c82044cdbc

tdf#152460: Improve script handling in style previews

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.