tdf#152460: Improve script handling in style previews

Use Edit Engine to get the script types instead of trying to duplicate
(poorly) its behaviour. This has the advantage of handling weak
characters and digits properly and is closer to what would happen in the
document itself.

We probably should go further and render the preview entirely using Edit
Engine (since the current code fails short of proper bidi handling), but
this is a bigger change.

Change-Id: I79b28067d80f66087e1d5e9399ba1a513de96c8a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144283
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>